<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="loginViewModel"
                type="com.tapp.safepof.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/FB_blue"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/login_constraint_view">
        <TextView
                android:text="@string/application_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/application_title_text"
                android:layout_marginEnd="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/application_image"
                app:layout_constraintVertical_bias="0.95"/>

        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp" app:srcCompat="@drawable/wallet"
                android:id="@+id/application_image" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/password_incorrect_text"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9"/>

        <TextView
                android:text="@string/password_incorrect_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password_incorrect_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/login_layout"
                style="@style/warning" android:visibility="invisible"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/login_layout"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/application_title_text"
                app:layout_constraintEnd_toEndOf="@+id/application_title_text" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:hint="Name"
                    android:text=""
                    android:layout_gravity="center"
                    android:ems="10"
                    android:id="@+id/name_edittext"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:hint="Password"
                    android:text=""
                    android:layout_gravity="center"
                    android:ems="10"
                    android:id="@+id/password_edittext"/>
        </LinearLayout>

        <Button
                android:text="@string/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/login_button"
                style="@style/button"
                app:layout_constraintTop_toBottomOf="@+id/login_layout"
                app:layout_constraintEnd_toEndOf="@+id/login_layout"
                app:layout_constraintStart_toStartOf="@+id/login_layout" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

        <TextView
                android:text="@string/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:id="@+id/forget_password_text"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/login_button"
                android:visibility="visible"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.10"/>
        <TextView
                android:text="@string/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:id="@+id/create_account_text" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/forget_password_text"
                app:layout_constraintVertical_bias="0.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>