<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="createAccountViewModel"
                type="com.tapp.safepof.CreateAccountViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/FB_blue" android:id="@+id/reset_password_constraint_view">

        <TextView
                android:text="@string/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/reset_password_text" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/account_imageview"
                app:layout_constraintVertical_bias="0.9"/>

        <TextView
                android:text="@string/password_not_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/password_not_match_text" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                style="@style/warning" android:visibility="invisible"
                app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password_not_match_text"
                app:layout_constraintStart_toStartOf="@+id/password_not_match_text">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:hint="User name"
                    android:ems="10"
                    android:id="@+id/user_name_edittext"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:hint="Password"
                    android:ems="10"
                    android:id="@+id/new_password_edittext"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:hint="Enter again"
                    android:ems="10"
                    android:id="@+id/enter_again_edittext"/>
        </LinearLayout>

        <Button
                android:text="@string/create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/create_account_button" app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                style="@style/button"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintVertical_bias="0.05"/>
        <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp" app:srcCompat="@drawable/account"
                android:id="@+id/account_imageview" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.80"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>