<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="financeTrackerViewModel"
                type="com.tapp.safepof.FinanceTrackerViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/finance_tracker_constraint_view">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_user_text"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_mono_medium"
                tools:text="Welcome back, Tomoya"
                app:layout_constraintStart_toStartOf="@+id/deposit_textview"
                app:layout_constraintBottom_toTopOf="@+id/deposit_textview" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.15"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/deposit_textview"
                android:textSize="36sp"
                android:fontFamily="@font/roboto_mono_medium"
                android:textColor="@color/dark_blue"
                android:textAlignment="center"
                tools:text="$3,000.00"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.26"/>

        <TextView
                android:text="@string/tap_prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tap_prompt"
                android:textAlignment="center"
                android:textSize="16sp" android:textColor="@color/light_gray"
                android:visibility="visible"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/deposit_textview"
                app:layout_constraintEnd_toEndOf="@+id/deposit_textview"
                appayout_constraintStart_toStartOf="@+id/deposit_textview"
                app:layout_constraintStart_toStartOf="@+id/deposit_textview"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:hint="@string/amount"
                android:ems="10"
                android:id="@+id/transaction_amount_edit_text" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purpose_edittext"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/purpose_edittext"
                android:visibility="invisible"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/done_image"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:visibility="invisible"
                android:textSize="18sp"
                android:hint="@string/purpose"
                android:ems="10"
                android:id="@+id/purpose_edittext"
                app:layout_constraintStart_toStartOf="@+id/deposit_textview"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tap_prompt"
                app:layout_constraintEnd_toEndOf="@+id/deposit_textview"/>

        <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/minus_button_blue"
                android:id="@+id/minus_button"
                android:onClick="@{() -> financeTrackerViewModel.onClickModifyButton(1)}"
                app:layout_constraintTop_toTopOf="@+id/add_button"
                app:layout_constraintBottom_toBottomOf="@+id/add_button" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:srcCompat="@drawable/add_button_orange"
                android:id="@+id/add_button"
                android:onClick="@{() -> financeTrackerViewModel.onClickModifyButton(0)}"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/minus_button" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/transaction_amount_edit_text" app:layout_constraintVertical_bias="0.13"/>

        <ImageView
                android:layout_width="72dp"
                android:layout_height="80dp" app:srcCompat="@drawable/log"
                android:id="@+id/logImage"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/minus_button" android:layout_marginStart="16dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/transaction_amount_edit_text"
                app:layout_constraintVertical_bias="0.10"/>
        <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp" app:srcCompat="@drawable/send"
                android:id="@+id/done_image"
                app:layout_constraintTop_toTopOf="@+id/transaction_amount_edit_text"
                app:layout_constraintBottom_toBottomOf="@+id/transaction_amount_edit_text"
                app:layout_constraintEnd_toEndOf="@+id/deposit_textview" android:layout_marginEnd="8dp"
                android:visibility="invisible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>